Add animated stretching when the messages search box is focused

--- a/source/windows-styling/toolsets.scss
+++ b/source/windows-styling/toolsets.scss
@@ -33,6 +33,22 @@
 
 }
 
+/* -- window-specific styling --------------------------------------------------------------------------------------- */
+
+#{ pref(panel-toolbox-contents-styling enabled) + $main-win } {
+
+    #gloda-search {
+
+        transition: flex 200ms ease;
+
+        &:focus-within {
+            flex: 1.5;
+        }
+
+    }
+
+}
+
 /* -- common styling ------------------------------------------------------------------------------------------------ */
 
 @mixin toolset-icons-styling {
