Fix btn icon behavior when active, move items margin to index.scss
    Fixed a bug introduced in the styling rewrite: when a button was on
    active state, its icon was not changing.

--- a/source/windows-styling/index.scss
+++ b/source/windows-styling/index.scss
@@ -14,6 +14,7 @@ $input-height: 28px;
 $input-font-size: 14.37px;
 $input-horizontal-padding: 6px;
 $actions-box-input-margin: ($actions-box-height - $input-height) / 2;
+$toolset-items-margin: 5px;
 
 :root {
     --ait-pixel-ratio: 1;
