Fix active btn border coloring on dark theme

--- a/source/shared-styling/globals.scss
+++ b/source/shared-styling/globals.scss
@@ -22,7 +22,7 @@ $content-bg-color-variants:        (light: #ffffff, dark: #404552);
 $content-border-color-variants:    (light: #dcdfe3, dark: #2b2e39);
 $input-border-color-variants:      (light: #cfd6e6, dark: #2b2e39);
 $input-placeholder-color-variants: (light: #a7aab0, dark: #2b2e39);
-$btn-active-border-color-variants: (light: #5294e2, dark: #8e95a0);
+$btn-active-border-color-variants: (light: #5294e2, dark: #2b2e39);
 $text-input-icon-color-variants:   (light: #7d8189, dark: #b6bcc6);
 $btn-bg-color-variants:            (light: #fbfbfc, dark: #444a58);
 $btn-hover-bg-color-variants:      (light: #ffffff, dark: #505666);
